Translations edit (#16)