@@ -3,7 +3,6 @@ package net.noiraude.creditseditor.ui.dialog;
 import static net.noiraude.creditseditor.ui.ScaledMetrics.fontHeadingDelta;
 import static net.noiraude.creditseditor.ui.ScaledMetrics.gapHuge;
 import static net.noiraude.creditseditor.ui.ScaledMetrics.gapMedium;
-import static net.noiraude.creditseditor.ui.ScaledMetrics.gapXLarge;
 import static net.noiraude.creditseditor.ui.ScaledMetrics.gapXXLarge;
 
 import java.awt.BorderLayout;
@@ -31,6 +30,7 @@ import javax.swing.KeyStroke;
 import net.noiraude.creditseditor.ui.AppIcons;
 import net.noiraude.creditseditor.ui.AppInfo;
 import net.noiraude.creditseditor.ui.I18n;
+import net.noiraude.creditseditor.ui.MsgArg;
 
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
@@ -46,7 +46,7 @@ import org.jetbrains.annotations.Nullable;
 public final class AboutDialog extends JDialog {
 
     public AboutDialog(@Nullable Frame owner) {
-        super(owner, I18n.get("dialog.about.title", AppInfo.name()), true);
+        super(owner, I18n.get("dialog.about.title", MsgArg.text(AppInfo.name())), true);
 
         JPanel content = new JPanel(new BorderLayout(gapHuge, gapXXLarge));
         content.setBorder(BorderFactory.createEmptyBorder(gapHuge, gapHuge, gapXXLarge, gapHuge));
@@ -69,7 +69,7 @@ public final class AboutDialog extends JDialog {
         JPanel wrap = new JPanel(new BorderLayout());
         List<Image> images = AppIcons.load();
         if (!images.isEmpty()) {
-            JLabel label = new JLabel(new ImageIcon(images.get(images.size() - 1)));
+            JLabel label = new JLabel(new ImageIcon(images.getLast()));
             wrap.add(label, BorderLayout.NORTH);
         }
         return wrap;
@@ -85,19 +85,19 @@ public final class AboutDialog extends JDialog {
         panel.add(nameLabel);
 
         panel.add(Box.createVerticalStrut(gapMedium));
-        panel.add(leftLabel(I18n.get("dialog.about.version", AppInfo.version())));
+        panel.add(leftLabel(I18n.get("dialog.about.version", MsgArg.text(AppInfo.version()))));
 
         String description = I18n.get("about.description");
         String license = AppInfo.license();
         if (!description.isEmpty() || !license.isEmpty()) {
-            panel.add(Box.createVerticalStrut(gapXLarge));
+            panel.add(Box.createVerticalStrut(gapMedium));
             if (!description.isEmpty()) panel.add(leftLabel(description));
             if (!license.isEmpty()) panel.add(leftLabel(license));
         }
 
         String copyright = AppInfo.copyright();
         if (!copyright.isEmpty()) {
-            panel.add(Box.createVerticalStrut(gapXLarge));
+            panel.add(Box.createVerticalStrut(gapMedium));
             panel.add(leftLabel(copyright));
         }
 
